--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
               <li><a href="">About Us</a></li>
+              <li><a href="">Product Us</a></li>
               <li><a href="">Clients</a></li>
               <li><a href="">Services</a></li>
               <li><a href="">Portfolio</a></li>
