menambahkan menu status

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <ul class="right hide-on-med-and-down">
               <li><a href="">About Us</a></li>
               <li><a href="">Product Us</a></li>
+              <li><a href="">Custom</a></li>
               <li><a href="">Clients</a></li>
               <li><a href="">Services</a></li>
               <li><a href="">Portfolio</a></li>
